# robot_wx_rs

./: Cargo.toml
conf/: cache.txt  meu.json  msg_response.json  wx_robot.toml
src/: lib.rs
src/resource/: meu_response.json  subscribe.conf
src/serialize/: cache.rs  menu.rs  mod.rs  static_ob.rs  xml.rs
