[package]
name = "robot_wx"
version = "0.1.0"
authors = ["许继强 <candy520mnbvcxz@gmail.com>"]
edition = "2018"

[lib]
name = "wx_robot"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
regex = "1.3.0"
lazy_static = "1.4.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
futures = "0.3.1"
bytes = "0.5"
quick-xml =  { version = "0.17", features = [ "serialize" ] }
config = "0.9"
log = "0.4"
env_logger = "0.7.1"